initial answer from claude checkpoint

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,11 @@
 ---
-
+import Layout from '../layouts/Layout.astro';
+import Editor from '../components/Editor';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Markdown Editor">
+  <main>
+    <h1>Markdown Editor</h1>
+    <Editor client:load />
+  </main>
+</Layout>
