updated Quill to use Client-Side Rendering in Editor.astro component and updated index.asto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,6 @@ import Editor from '../components/Editor';
 <Layout title="Markdown Editor">
   <main>
     <h1>Markdown Editor</h1>
-    <Editor client:load />
+    <Editor client:only="react" />
   </main>
 </Layout>
